Bug 2052887 - Move detekt to top level as a plugin r=geckoview-reviewers,android-reviewers,nalexander,ahochheiden
Update the temporary detekt ktlint aliases with top-level detekt plugin. With current implementation, the mach instances are overwriting and corrupting the same objdir causing failures even without touching code. This is not caught by try as it runs subproject linters sequentially.

Differential Revision: https://phabricator.services.mozilla.com/D311097